[gd_scene load_steps=12 format=3 uid="uid://cvq6hoqwr2u63"]

[ext_resource type="Script" uid="uid://dgsljanddlhpo" path="res://Shop/PurchasableItem.gd" id="1_agjbo"]
[ext_resource type="Texture2D" uid="uid://bbymuwjfy1odl" path="res://images/shopitembg-sheet0.png" id="1_nculf"]
[ext_resource type="Script" uid="uid://dp46y21bah51o" path="res://Shop/PurchasableItemResource.gd" id="2_nnw6g"]
[ext_resource type="Texture2D" uid="uid://dqy5c0v05q25w" path="res://images/pricebg-sheet0.png" id="4_iahk4"]
[ext_resource type="Texture2D" uid="uid://dxnsvrnn4revj" path="res://images/shopitems-sheet0.png" id="4_obgti"]
[ext_resource type="PackedScene" uid="uid://cdh0tajtv7j3e" path="res://UIControl/number_show.tscn" id="5_obgti"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ul0qr"]
atlas = ExtResource("1_nculf")
region = Rect2(266, 2, 244, 253)

[sub_resource type="Resource" id="Resource_nculf"]
script = ExtResource("2_nnw6g")
item_name = "默认名字"
item_price = 100
metadata/_custom_type_script = "uid://dp46y21bah51o"

[sub_resource type="AtlasTexture" id="AtlasTexture_0sc4p"]
atlas = ExtResource("1_nculf")
region = Rect2(2, 2, 260, 269)

[sub_resource type="AtlasTexture" id="AtlasTexture_rg057"]
atlas = ExtResource("4_obgti")
region = Rect2(277, 236, 120, 156)

[sub_resource type="AtlasTexture" id="AtlasTexture_obgti"]
atlas = ExtResource("4_obgti")
region = Rect2(401, 240, 96, 112)

[node name="PurchasableItem" type="TextureButton"]
anchors_preset = -1
anchor_right = 0.212
anchor_bottom = 0.392
offset_right = -0.224014
offset_bottom = -0.0160065
grow_horizontal = 2
grow_vertical = 2
texture_normal = SubResource("AtlasTexture_ul0qr")
script = ExtResource("1_agjbo")
item_data = SubResource("Resource_nculf")
purchased_sprite = SubResource("AtlasTexture_0sc4p")

[node name="SelledShow" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -78.0
offset_right = 60.0
offset_bottom = 78.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_rg057")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 40.0
grow_vertical = 0
texture = ExtResource("4_iahk4")

[node name="NumberShow" parent="TextureRect" instance=ExtResource("5_obgti")]
layout_mode = 1
offset_left = 69.0
offset_right = 69.0
num = 123456
num_color = "blue"

[node name="DefaultShow" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -56.0
offset_right = 48.0
offset_bottom = 56.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_obgti")

[connection signal="pressed" from="." to="." method="_on_pressed"]
